[package]
name = "wpr"
version = "0.1.2"
authors = ["Jochen Kupperschmidt <homework@nwsnet.de>"]
edition = "2018"
description = "Wallpaper Randomizer. Sets a wallpaper (using feh) randomly chosen from a directory."
readme = "README.md"
repository = "https://github.com/homeworkprod/wpr"
license = "MIT"
keywords = ["background", "desktop", "wallpaper"]
categories = ["command-line-utilities"]

[dependencies]
lazy_static = "1.4.0"
rand = "0.8"
