[package]
name = "wpr"
version = "0.2.0"
authors = ["Jochen Kupperschmidt"]
edition = "2021"
description = "Wallpaper Randomizer. Sets a wallpaper (using feh) randomly chosen from a directory."
readme = "README.md"
repository = "https://github.com/homeworkprod/wpr"
license = "MIT"
keywords = ["background", "desktop", "wallpaper"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "2.33.3", default-features = false }
lazy_static = "1.4.0"
rand = "0.8"
