[package]
name = "wpr"
version = "0.3.0"
authors = ["Jochen Kupperschmidt"]
edition = "2021"
description = "Wallpaper Randomizer. Sets a wallpaper (using feh) randomly chosen from a directory."
readme = "README.md"
repository = "https://github.com/homeworkprod/wpr"
license = "MIT"
keywords = ["background", "desktop", "wallpaper"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.2.16", default-features = false, features = ["cargo", "std"] }
rand = "0.8.5"
